src/index.css
@import url('https://fonts.googleapis.com/css?family=Raleway');
body {
    font-family: 'Raleway', sans-serif;
    background-color: #CCC;
    margin: 1em;
    color: #333;
}

h1 {
    font-size: 1.6em;
    margin-top: 0;
}

h2,
h3 {
    margin-bottom: 0;
}

h3 {
    padding-top: .5em;
}

.react-bodymovin-container {
    width: 150px;
    margin: auto;
}

.dashboard {
    margin: 50px auto;
    max-width: 600px;
    text-align: center;
}

.leader-board {
    margin: 2em 0;
}

.usr {
    min-height: calc(4em + 8px);
    margin-left: 2em;
    margin-bottom: .5em;
    clear: both;
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, .2);
    border-radius: 0 3em 3em 0;
    background-color: #EEE;
}

.usr-img {
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, .2);
    border: 4px solid #EEE;
    background-color: #CCC;
    background-size: cover;
    height: 4em;
    width: 4em;
    margin-left: -2em;
    border-radius: 50%;
    float: left;
}

.usr-info {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    padding-left: 1em;
    font-size: .75em;
}

.user-info span {
    font-size: .9em;
}

.usr-name {
    grid-column: 1 / 6;
    text-align: left;
}

.usr-name span {
    vertical-align: middle;
    margin-right: 8px;
}

span.badge:before {
    margin-right: 1px;
    width: 7px;
    height: 7px;
    content: ' ';
    display: inline-block;
    border-radius: 50%;
    vertical-align: middle;
}

span.silver:before {
    background: #8c9298;
}

span.bronze:before {
    background: #c38b5f;
}

span.gold:before {
    background: #cda400;
}

.usr-points-week {
    grid-column: 6/8;
}

.usr-points-month {
    grid-column: 8/10;
}

.usr-activity {
    grid-column: 10/12;
}

.usr-activity svg {
    margin: -5px;
    width: 1.3em;
    height: 1.3em;
}

input {
    display: none;
}

label {
    cursor: pointer;
}

input:checked+label {
    border-bottom: 1px solid #666;
}

@media (max-width: 900px) {
    .dashboard {
        margin: 40px auto;
    }
    .usr {
        font-size: .9em;
    }
    .react-bodymovin-container {
        width: 100px;
    }
    h1 {
        font-size: 1.4em;
    }
}

@media (max-width: 768px) {
    .dashboard {
        margin: 25px auto;
    }
    .usr {
        font-size: .8em;
    }
    .react-bodymovin-container {
        width: 75px;
    }
    h1 {
        font-size: 1.2em;
    }
}

@media (max-width: 480px) {
    .dashboard {
        margin: 15px auto;
    }
    .usr {
        font-size: .7em;
    }
    h1 {
        font-size: 1em;
    }
}

